syntax = "proto3";

package company;

option go_package = "github.com/seferovramin7/company-service/proto";

message Company {
  int64 id = 1;
  string name = 2;
  string description = 3;
  int32 employees = 4;
  bool registered = 5;
  string type = 6;
}

message CompanyID {
  int64 id = 1;
}

message CreateCompanyRequest {
  Company company = 1;
}

message UpdateCompanyRequest {
  int64 id = 1;
  Company company = 2;
}

message DeleteCompanyRequest {
  int64 id = 1;
}

message GetCompanyResponse {
  Company company = 1;
}

message LoginRequest {
  int64 user_id = 1;
}

message LoginResponse {
  string token = 1;
}

message CreateCompanyResponse {
  Company company = 1;
}
message UpdateCompanyResponse {
  Company company = 1;
}

service CompanyService {
  rpc CreateCompany (CreateCompanyRequest) returns (CreateCompanyResponse);
  rpc UpdateCompany (UpdateCompanyRequest) returns (UpdateCompanyResponse);
  rpc DeleteCompany (DeleteCompanyRequest) returns (CompanyID);
  rpc GetCompany (CompanyID) returns (GetCompanyResponse);

  rpc Login (LoginRequest) returns (LoginResponse);
}
